# kedro_tdda

./: .gitignore  .nojekyll  GITHUB.qmd  Makefile  README.md  index.html  pyproject.toml  robots.txt  search.json  sitemap.xml
.github/workflows/: publish_docs.yml  static.yml
docs/: .gitignore  _demo.qmd  _quarto.yml  _sidebar.yml  demo.html  demo.qmd  fix-shell.py  index.qmd  objects.json
docs/_site/: index.html  search.json
docs/_site/reference/: cli.detect.html  cli.verify.html  detect.html  discover.html  hooks.TddaHooks.html  index.html  tdda_commands.html  verify.html
docs/reference/: TddaHooks.qmd  cli.detect.qmd  cli.discover.qmd  cli.verify.qmd  detect.qmd  discover.qmd  hooks.TddaHooks.qmd  index.qmd  tdda_commands.qmd  verify.qmd
kedro_tdda/: cli.py  hooks.py  utils.py
reference/: TddaHooks.html  cli.detect.html  cli.discover.html  cli.verify.html  detect.html  discover.html  hooks.TddaHooks.html  index.html  tdda_commands.html  verify.html
